# vkontwin

./: .gitignore  CMakeLists.txt  README.md
src/: HelloWidget.cpp  HelloWidget.h  MainWindow.cpp  MainWindow.h  main.cpp  moc_HelloWidget.cxx  moc_MainWindow.cxx
